linked to ars-alpha.

--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4>Learn to Code Puzzle</h4>
+                        <h4>Ars</h4>
                     </div>
                     <div class="panel-body" style="height:115px;">
-                        <p>Under development</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <p>Photography rating and sharing service.  I wrote the backend, API, and the frontend.  Currently under development.</p>
+                        <a href="http://frontend-test-dot-ars-alpha.appspot.com/" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
