--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                     <div class="panel-heading">
                         <h4>Ars</h4>
                     </div>
-                    <div class="panel-body" style="height:135px;">
-                        <p>Photography rating and sharing service.  I wrote the backend, API, and the frontend.  Currently under development.</p>
+                    <div class="panel-body" style="height:145px;">
+                        <p>Photography rating and sharing service.  I wrote the backend, API, and the web frontend.  Currently under development.  If link doesn't load the first time, please try again to load the cache in GAE.</p>
                         <a href="http://frontend-test-dot-ars-alpha.appspot.com/" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                     <div class="panel-heading">
                         <h4>Mosh Network Simulator</h4>
                     </div>
-                    <div class="panel-body" style="height:135px;">
+                    <div class="panel-body" style="height:145px;">
                         <p>Validate the response-time measurements of the <a href="https://mosh.org/">MOSH</a> terminal developed by Keith Winstein at MIT.</p>
                         <a href="https://github.com/kjtmckenzie/mosh_test" class="btn btn-default">Learn More</a>
                     </div>
@@ -151,7 +151,7 @@
                     <div class="panel-heading">
                         <h4>Fault Injector</h4>
                     </div>
-                    <div class="panel-body" style="height:135px;">
+                    <div class="panel-body" style="height:145px;">
                         <p>Inject standard OS faults into Linux programs to test error handling routines.</p>
                         <a href="https://github.com/kjtmckenzie/cs240-lab3" class="btn btn-default">Learn More</a>
                     </div>
