updated link to ars-beta

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     </div>
                     <div class="panel-body" style="height:145px;">
                         <p>Photography rating and sharing service.  I wrote the backend, API, and the web frontend.  Currently under development.  If link doesn't load the first time, please try again to load the cache in GAE.</p>
-                        <a href="http://frontend-test-dot-ars-alpha.appspot.com/" class="btn btn-default">Learn More</a>
+                        <a href="https://beta-ars.appspot.com" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
             </div>
