Added GCP certification

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                 <p>I am a technology consultant for Deloitte Consulting.  I received a Masters in Computer Science from Stanford University in 2016.  I have a passion for photography and all things outdoors.  </p>
                 <p><a href="about/docs/kmckenzie_resume.pdf">Resume</a></p>
 				<p><a href="https://www.linkedin.com/in/kpmckenzie">LinkedIn</a></p>
+				<p><a href="https://www.credential.net/6pe357iu?key=201db570836aa37960563c5e4d331bd3d703e71ea798062e21d831b8cf1d1c62">GCP Certification - Professional Cloud Architect</a></p>
             </div>
         </div>
         <!-- /.row -->
